<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">USBToDeviceComm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_btn_set_baudrate">Set Baudrate</string>
    <string name="str_btn_set_flowcontrol">Enable FlowControl</string>
    <string name="str_btn_pc_to_comm">PC To Comm</string>
    <string name="str_btn_pc_to_mem">PC to Bmg</string>
    <string name="str_btn_pc_exit">Disconnect</string>
    <string name="str_pg_title">Please Waite</string>
    <string name="str_pg_ctx">Switching please wait..</string>
    <string name="str_baudrate_pop_ctx">Clicked popup set Baudrate menu item</string>
    <string name="str_flowcontrol_pop_ctx">Clicked popup set flowcontrol menu item</string>
    <string name="str_press_warnnig_ctx">this item is already pressed!</string>
    <string name="str_baudrate_menu_item1">B1200</string>
    <string name="str_baudrate_menu_item2">B2400</string>
    <string name="str_baudrate_menu_item3">B4800</string>
    <string name="str_baudrate_menu_item4">B9600</string>
    <string name="str_baudrate_menu_item5">B19200</string>
    <string name="str_baudrate_menu_item6">B38400</string>
    <string name="str_baudrate_menu_item7">B57600</string>
    <string name="str_baudrate_menu_item8">B115200</string>
    <string name="str_baudrate_menu_item9">B230400</string>
    <string name="str_baudrate_menu_item10">B921600</string>
    <string name="str_set_flowcontrol_enable">Enable</string>
    <string name="str_set_flowcontrol_disable">Disable</string>

</resources>