<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainUI" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/btn_set_baudrate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="OnSetBaudrate"
        android:text="@string/str_btn_set_baudrate" />
        
    <Button
        android:id="@+id/btn_set_flowcontrol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="OnSetFlowControl"
        android:text="@string/str_btn_set_flowcontrol" />    

    <Button
        android:id="@+id/btn_pc_to_comm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="OnPC2COMM"
        android:text="@string/str_btn_pc_to_comm" />

    <Button
        android:id="@+id/btn_pc_to_mem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="OnPC2MEM"
        android:text="@string/str_btn_pc_to_mem" />
    
    <Button
        android:id="@+id/btn_pc_exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="OnPCExit"
        android:text="@string/str_btn_pc_exit" />

</LinearLayout>